--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
 }
 
@@ -43,8 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation "com.google.dagger:dagger:2.28.3"
+    implementation  "com.google.dagger:dagger-android-support:2.12"
     kapt "com.google.dagger:dagger-compiler:2.15"
-    implementation "com.google.dagger:dagger-android:2.35.1"
-    kapt "com.google.dagger:dagger-android-processor:2.19"
 }
